# rust-mysqldump

./: .env  .gitignore  Cargo.toml  README.md  readme.md
.github/workflows/: rust.yml
src/: main.rs
src/config/: database.rs
src/utils/: output.rs
tests/: integration_tests.rs
