[package]
name = "rust_mysqldump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
mysql = "24.0.0"
colored = "2.0.4"
cli-table = "0.4.7"
